@@ -5,7 +5,9 @@ Added support for specifying the size of tick labels (axis.labelWidth,
 axis.labelHeight). Useful for specifying a max label size to keep
 multiple plots aligned.
 
-Fixed a bug in calculating spacing around the plot (reported by timothytoe).
+Fixed a bug in calculating spacing around the plot (reported by
+timothytoe). Fixed a bug in finding max values for all-negative data
+sets. Prevent the possibility of eternal looping in tick calculations.
 
 
 Flot 0.4
